uncomment test fcc

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 id='title'>United States Educational Attaiment</h1>
 <h2 id='description'>Percentage of adults age 25 and older with a bachelor's degree or  higher (2010 - 2014)</h2>
 
-<script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
+<!--<script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>-->
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src='https://unpkg.com/topojson@3'></script>
 <!--<script src='https://d3js.org/d3-fetch.v1.min.js'></script>
